[package]
name = "imageproc-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2"
conv = "0.3"
image = { git = "https://github.com/Gelbpunkt/image.git", branch = "export-enlargeable", default-features = false }
num = "0.4"
